--- a/index.html
+++ b/index.html
@@ -1,114 +1,265 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Top 12 Asian Economies - Macro Dashboard</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f9f9f9;
-      color: #222;
-    }
-    header {
-      background-color: #05445E;
-      color: white;
-      padding: 15px;
-      text-align: center;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      font-size: 12px;
-      table-layout: fixed;
-    }
-    th, td {
-      border: 1px solid #ddd;
-      padding: 8px;
-      text-align: left;
-      word-wrap: break-word;
-    }
-    th {
-      background-color: #D4F1F4;
-    }
-    .container {
-      padding: 15px;
-      overflow-x: auto;
-    }
-    @media screen and (max-width: 768px) {
-      th, td {
-        font-size: 10px;
-      }
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Top 12 Asian Economies - Macro Parameters</title>
+    <style>
+        body { font-family: Arial, sans-serif; margin: 20px; }
+        table { width: 100%; border-collapse: collapse; }
+        th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
+        th { background-color: #f2f2f2; }
+        @media screen and (max-width: 600px) {
+            table { border: 0; }
+            thead { display: none; }
+            tr { border-bottom: 2px solid #ddd; display: block; margin-bottom: 10px; }
+            td { border-bottom: 1px solid #ddd; display: block; text-align: right; }
+            td:before { content: attr(data-label); float: left; font-weight: bold; }
+        }
+    </style>
 </head>
 <body>
-  <header>
-    <h2>Top 12 Asian Economies - Key Macro Indicators (2025)</h2>
-  </header>
-  <div class="container">
+    <h1>Top 12 Asian Economies: Key Macro Parameters (2025 Estimates)</h1>
+    <p>Data compiled from IMF, World Bank, and other sources as of July 2025. All figures approximate.</p>
     <table>
-      <thead>
-        <tr>
-          <th>Country</th>
-          <th>GDP (US$ Bn)</th>
-          <th>GDP Growth (%)</th>
-          <th>GDP/Capita (US$)</th>
-          <th>Population (Mn)</th>
-          <th>Inflation (%)</th>
-          <th>Unemployment (%)</th>
-          <th>Interest Rate (%)</th>
-          <th>FX Reserves (US$ Bn)</th>
-          <th>Current Account (% GDP)</th>
-          <th>FDI Inflows (US$ Bn)</th>
-          <th>Fiscal Deficit (% GDP)</th>
-          <th>Debt/GDP (%)</th>
-          <th>Currency (vs USD)</th>
-          <th>Equity YTD (%)</th>
-          <th>Commentary</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>China</td><td>18,600</td><td>4.8</td><td>13,200</td><td>1,410</td><td>2.1</td><td>5.2</td><td>2.5</td><td>3,180</td><td>1.2</td><td>180</td><td>-3.0</td><td>80</td><td>7.2</td><td>+2.4</td><td>Stimulus-led recovery, structural slowdown risks</td>
-        </tr>
-        <tr>
-          <td>Japan</td><td>4,300</td><td>1.1</td><td>34,300</td><td>125</td><td>2.8</td><td>2.5</td><td>0.1</td><td>1,150</td><td>2.9</td><td>10</td><td>-6.1</td><td>263</td><td>155.4</td><td>+5.1</td><td>Yen weakness persists, deflation risk abates</td>
-        </tr>
-        <tr>
-          <td>India</td><td>3,900</td><td>6.5</td><td>2,700</td><td>1,430</td><td>4.8</td><td>7.6</td><td>6.5</td><td>600</td><td>-1.1</td><td>55</td><td>-5.8</td><td>83</td><td>83.2</td><td>+13.7</td><td>Strong domestic demand, investment-led growth</td>
-        </tr>
-        <tr>
-          <td>South Korea</td><td>1,800</td><td>2.5</td><td>35,000</td><td>52</td><td>2.6</td><td>3.3</td><td>3.5</td><td>425</td><td>3.1</td><td>30</td><td>-3.8</td><td>58</td><td>1,385</td><td>+6.2</td><td>Export rebound and tech sector recovery</td>
-        </tr>
-        <tr>
-          <td>Indonesia</td><td>1,400</td><td>5.1</td><td>5,000</td><td>280</td><td>2.9</td><td>5.0</td><td>6.25</td><td>135</td><td>-0.5</td><td>25</td><td>-2.5</td><td>40</td><td>15,800</td><td>+3.4</td><td>Nickel boom, stable macro framework</td>
-        </tr>
-        <tr>
-          <td>Saudi Arabia</td><td>1,200</td><td>2.4</td><td>32,000</td><td>37</td><td>2.3</td><td>6.5</td><td>5.5</td><td>460</td><td>6.2</td><td>20</td><td>0.0</td><td>25</td><td>3.75</td><td>+7.9</td><td>Oil price dependent, Vision 2030 reforms</td>
-        </tr>
-        <tr>
-          <td>Thailand</td><td>570</td><td>2.8</td><td>8,200</td><td>70</td><td>1.7</td><td>1.2</td><td>2.5</td><td>240</td><td>3.3</td><td>12</td><td>-3.5</td><td>63</td><td>36.3</td><td>+4.4</td><td>Tourism rebound, limited fiscal space</td>
-        </tr>
-        <tr>
-          <td>UAE</td><td>540</td><td>3.3</td><td>54,000</td><td>10</td><td>2.4</td><td>3.0</td><td>5.4</td><td>120</td><td>6.8</td><td>22</td><td>1.5</td><td>30</td><td>3.67</td><td>+2.9</td><td>Strong services sector, non-oil diversification</td>
-        </tr>
-        <tr>
-          <td>Vietnam</td><td>480</td><td>6.2</td><td>4,900</td><td>100</td><td>3.5</td><td>2.1</td><td>4.5</td><td>110</td><td>3.5</td><td>18</td><td>-4.2</td><td>39</td><td>24,800</td><td>+10.1</td><td>Manufacturing-led growth, FDI magnet</td>
-        </tr>
-        <tr>
-          <td>Malaysia</td><td>460</td><td>4.2</td><td>13,200</td><td>34</td><td>2.0</td><td>3.5</td><td>3.0</td><td>105</td><td>1.8</td><td>17</td><td>-5.0</td><td>66</td><td>4.7</td><td>+5.6</td><td>Commodity recovery, political stability crucial</td>
-        </tr>
-        <tr>
-          <td>Philippines</td><td>440</td><td>5.8</td><td>3,900</td><td>115</td><td>3.1</td><td>4.2</td><td>6.5</td><td>95</td><td>-3.2</td><td>12</td><td>-6.4</td><td>61</td><td>57.4</td><td>+7.3</td><td>Strong remittances, fiscal consolidation needed</td>
-        </tr>
-        <tr>
-          <td>Bangladesh</td><td>430</td><td>6.0</td><td>2,400</td><td>180</td><td>5.2</td><td>4.0</td><td>7.0</td><td>45</td><td>-1.8</td><td>4</td><td>-5.3</td><td>36</td><td>117</td><td>+6.5</td><td>Export-driven, inflation challenge persists</td>
-        </tr>
-      </tbody>
+        <thead>
+            <tr>
+                <th>Country</th>
+                <th>Nominal GDP (USD bn)</th>
+                <th>PPP GDP (USD bn)</th>
+                <th>GDP Growth (%)</th>
+                <th>GDP per Capita (USD)</th>
+                <th>Population (mn)</th>
+                <th>Inflation (%)</th>
+                <th>Unemployment (%)</th>
+                <th>Debt to GDP (%)</th>
+                <th>Current Account (% GDP)</th>
+                <th>Exports (USD bn)</th>
+                <th>Imports (USD bn)</th>
+                <th>FDI Inflow (USD bn)</th>
+                <th>Currency</th>
+                <th>Central Bank Rate (%)</th>
+                <th>Commentary</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td data-label="Country">China</td>
+                <td data-label="Nominal GDP (USD bn)">19320</td>
+                <td data-label="PPP GDP (USD bn)">35000</td>
+                <td data-label="GDP Growth (%)">4.5</td>
+                <td data-label="GDP per Capita (USD)">13600</td>
+                <td data-label="Population (mn)">1410</td>
+                <td data-label="Inflation (%)">1.5</td>
+                <td data-label="Unemployment (%)">5.0</td>
+                <td data-label="Debt to GDP (%)">80</td>
+                <td data-label="Current Account (% GDP)">1.5</td>
+                <td data-label="Exports (USD bn)">3500</td>
+                <td data-label="Imports (USD bn)">2800</td>
+                <td data-label="FDI Inflow (USD bn)">180</td>
+                <td data-label="Currency">CNY</td>
+                <td data-label="Central Bank Rate (%)">4.0</td>
+                <td data-label="Commentary">Slowing growth due to property sector issues, strong in manufacturing and exports.</td>
+            </tr>
+            <tr>
+                <td data-label="Country">India</td>
+                <td data-label="Nominal GDP (USD bn)">4190</td>
+                <td data-label="PPP GDP (USD bn)">15000</td>
+                <td data-label="GDP Growth (%)">6.8</td>
+                <td data-label="GDP per Capita (USD)">2880</td>
+                <td data-label="Population (mn)">1455</td>
+                <td data-label="Inflation (%)">4.5</td>
+                <td data-label="Unemployment (%)">6.5</td>
+                <td data-label="Debt to GDP (%)">85</td>
+                <td data-label="Current Account (% GDP)">-1.5</td>
+                <td data-label="Exports (USD bn)">700</td>
+                <td data-label="Imports (USD bn)">900</td>
+                <td data-label="FDI Inflow (USD bn)">70</td>
+                <td data-label="Currency">INR</td>
+                <td data-label="Central Bank Rate (%)">6.5</td>
+                <td data-label="Commentary">Robust growth from domestic demand and infrastructure investments.</td>
+            </tr>
+            <tr>
+                <td data-label="Country">Japan</td>
+                <td data-label="Nominal GDP (USD bn)">4186</td>
+                <td data-label="PPP GDP (USD bn)">6000</td>
+                <td data-label="GDP Growth (%)">1.0</td>
+                <td data-label="GDP per Capita (USD)">34000</td>
+                <td data-label="Population (mn)">123</td>
+                <td data-label="Inflation (%)">2.0</td>
+                <td data-label="Unemployment (%)">2.5</td>
+                <td data-label="Debt to GDP (%)">250</td>
+                <td data-label="Current Account (% GDP)">3.5</td>
+                <td data-label="Exports (USD bn)">900</td>
+                <td data-label="Imports (USD bn)">900</td>
+                <td data-label="FDI Inflow (USD bn)">50</td>
+                <td data-label="Currency">JPY</td>
+                <td data-label="Central Bank Rate (%)">0.1</td>
+                <td data-label="Commentary">High public debt and aging population constraining growth.</td>
+            </tr>
+            <tr>
+                <td data-label="Country">Russia</td>
+                <td data-label="Nominal GDP (USD bn)">2076</td>
+                <td data-label="PPP GDP (USD bn)">5000</td>
+                <td data-label="GDP Growth (%)">1.5</td>
+                <td data-label="GDP per Capita (USD)">14400</td>
+                <td data-label="Population (mn)">144</td>
+                <td data-label="Inflation (%)">5.0</td>
+                <td data-label="Unemployment (%)">4.0</td>
+                <td data-label="Debt to GDP (%)">20</td>
+                <td data-label="Current Account (% GDP)">4.0</td>
+                <td data-label="Exports (USD bn)">500</td>
+                <td data-label="Imports (USD bn)">300</td>
+                <td data-label="FDI Inflow (USD bn)">20</td>
+                <td data-label="Currency">RUB</td>
+                <td data-label="Central Bank Rate (%)">7.5</td>
+                <td data-label="Commentary">Sanctions impacting economy, reliant on energy exports.</td>
+            </tr>
+            <tr>
+                <td data-label="Country">South Korea</td>
+                <td data-label="Nominal GDP (USD bn)">1790</td>
+                <td data-label="PPP GDP (USD bn)">3000</td>
+                <td data-label="GDP Growth (%)">2.2</td>
+                <td data-label="GDP per Capita (USD)">35000</td>
+                <td data-label="Population (mn)">51</td>
+                <td data-label="Inflation (%)">2.0</td>
+                <td data-label="Unemployment (%)">3.5</td>
+                <td data-label="Debt to GDP (%)">50</td>
+                <td data-label="Current Account (% GDP)">4.0</td>
+                <td data-label="Exports (USD bn)">700</td>
+                <td data-label="Imports (USD bn)">650</td>
+                <td data-label="FDI Inflow (USD bn)">25</td>
+                <td data-label="Currency">KRW</td>
+                <td data-label="Central Bank Rate (%)">3.5</td>
+                <td data-label="Commentary">Tech and export-driven, vulnerable to global demand.</td>
+            </tr>
+            <tr>
+                <td data-label="Country">Turkey</td>
+                <td data-label="Nominal GDP (USD bn)">1437</td>
+                <td data-label="PPP GDP (USD bn)">3600</td>
+                <td data-label="GDP Growth (%)">3.0</td>
+                <td data-label="GDP per Capita (USD)">16000</td>
+                <td data-label="Population (mn)">85</td>
+                <td data-label="Inflation (%)">40.0</td>
+                <td data-label="Unemployment (%)">10.0</td>
+                <td data-label="Debt to GDP (%)">40</td>
+                <td data-label="Current Account (% GDP)">-3.0</td>
+                <td data-label="Exports (USD bn)">250</td>
+                <td data-label="Imports (USD bn)">300</td>
+                <td data-label="FDI Inflow (USD bn)">10</td>
+                <td data-label="Currency">TRY</td>
+                <td data-label="Central Bank Rate (%)">50.0</td>
+                <td data-label="Commentary">Battling high inflation and currency volatility.</td>
+            </tr>
+            <tr>
+                <td data-label="Country">Indonesia</td>
+                <td data-label="Nominal GDP (USD bn)">1429</td>
+                <td data-label="PPP GDP (USD bn)">4700</td>
+                <td data-label="GDP Growth (%)">5.0</td>
+                <td data-label="GDP per Capita (USD)">5200</td>
+                <td data-label="Population (mn)">275</td>
+                <td data-label="Inflation (%)">2.5</td>
+                <td data-label="Unemployment (%)">5.0</td>
+                <td data-label="Debt to GDP (%)">40</td>
+                <td data-label="Current Account (% GDP)">-0.5</td>
+                <td data-label="Exports (USD bn)">300</td>
+                <td data-label="Imports (USD bn)">250</td>
+                <td data-label="FDI Inflow (USD bn)">25</td>
+                <td data-label="Currency">IDR</td>
+                <td data-label="Central Bank Rate (%)">6.0</td>
+                <td data-label="Commentary">Commodity-driven growth with emerging consumer market.</td>
+            </tr>
+            <tr>
+                <td data-label="Country">Saudi Arabia</td>
+                <td data-label="Nominal GDP (USD bn)">1083</td>
+                <td data-label="PPP GDP (USD bn)">2300</td>
+                <td data-label="GDP Growth (%)">3.0</td>
+                <td data-label="GDP per Capita (USD)">30000</td>
+                <td data-label="Population (mn)">36</td>
+                <td data-label="Inflation (%)">2.0</td>
+                <td data-label="Unemployment (%)">5.0</td>
+                <td data-label="Debt to GDP (%)">30</td>
+                <td data-label="Current Account (% GDP)">5.0</td>
+                <td data-label="Exports (USD bn)">300</td>
+                <td data-label="Imports (USD bn)">200</td>
+                <td data-label="FDI Inflow (USD bn)">20</td>
+                <td data-label="Currency">SAR</td>
+                <td data-label="Central Bank Rate (%)">6.0</td>
+                <td data-label="Commentary">Diversifying from oil under Vision 2030.</td>
+            </tr>
+            <tr>
+                <td data-label="Country">Taiwan</td>
+                <td data-label="Nominal GDP (USD bn)">804</td>
+                <td data-label="PPP GDP (USD bn)">1700</td>
+                <td data-label="GDP Growth (%)">3.0</td>
+                <td data-label="GDP per Capita (USD)">34000</td>
+                <td data-label="Population (mn)">23</td>
+                <td data-label="Inflation (%)">1.5</td>
+                <td data-label="Unemployment (%)">3.5</td>
+                <td data-label="Debt to GDP (%)">30</td>
+                <td data-label="Current Account (% GDP)">12.0</td>
+                <td data-label="Exports (USD bn)">450</td>
+                <td data-label="Imports (USD bn)">400</td>
+                <td data-label="FDI Inflow (USD bn)">10</td>
+                <td data-label="Currency">TWD</td>
+                <td data-label="Central Bank Rate (%)">2.0</td>
+                <td data-label="Commentary">Global leader in semiconductors, geopolitical tensions with China.</td>
+            </tr>
+            <tr>
+                <td data-label="Country">Israel</td>
+                <td data-label="Nominal GDP (USD bn)">584</td>
+                <td data-label="PPP GDP (USD bn)">550</td>
+                <td data-label="GDP Growth (%)">1.5</td>
+                <td data-label="GDP per Capita (USD)">60000</td>
+                <td data-label="Population (mn)">9.8</td>
+                <td data-label="Inflation (%)">3.0</td>
+                <td data-label="Unemployment (%)">4.0</td>
+                <td data-label="Debt to GDP (%)">60</td>
+                <td data-label="Current Account (% GDP)">5.0</td>
+                <td data-label="Exports (USD bn)">150</td>
+                <td data-label="Imports (USD bn)">130</td>
+                <td data-label="FDI Inflow (USD bn)">25</td>
+                <td data-label="Currency">ILS</td>
+                <td data-label="Central Bank Rate (%)">4.5</td>
+                <td data-label="Commentary">Innovation-driven economy, impacted by regional conflicts.</td>
+            </tr>
+            <tr>
+                <td data-label="Country">Singapore</td>
+                <td data-label="Nominal GDP (USD bn)">565</td>
+                <td data-label="PPP GDP (USD bn)">800</td>
+                <td data-label="GDP Growth (%)">2.5</td>
+                <td data-label="GDP per Capita (USD)">100000</td>
+                <td data-label="Population (mn)">5.6</td>
+                <td data-label="Inflation (%)">2.0</td>
+                <td data-label="Unemployment (%)">2.0</td>
+                <td data-label="Debt to GDP (%)">160</td>
+                <td data-label="Current Account (% GDP)">18.0</td>
+                <td data-label="Exports (USD bn)">500</td>
+                <td data-label="Imports (USD bn)">450</td>
+                <td data-label="FDI Inflow (USD bn)">100</td>
+                <td data-label="Currency">SGD</td>
+                <td data-label="Central Bank Rate (%)">3.0</td>
+                <td data-label="Commentary">Financial and trade hub with high per capita income.</td>
+            </tr>
+            <tr>
+                <td data-label="Country">UAE</td>
+                <td data-label="Nominal GDP (USD bn)">549</td>
+                <td data-label="PPP GDP (USD bn)">950</td>
+                <td data-label="GDP Growth (%)">4.0</td>
+                <td data-label="GDP per Capita (USD)">50000</td>
+                <td data-label="Population (mn)">10</td>
+                <td data-label="Inflation (%)">2.0</td>
+                <td data-label="Unemployment (%)">3.0</td>
+                <td data-label="Debt to GDP (%)">30</td>
+                <td data-label="Current Account (% GDP)">8.0</td>
+                <td data-label="Exports (USD bn)">400</td>
+                <td data-label="Imports (USD bn)">300</td>
+                <td data-label="FDI Inflow (USD bn)">30</td>
+                <td data-label="Currency">AED</td>
+                <td data-label="Central Bank Rate (%)">5.0</td>
+                <td data-label="Commentary">Economy diversifying into tourism, finance, and tech.</td>
+            </tr>
+        </tbody>
     </table>
-  </div>
 </body>
 </html>
