--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         table { width: 100%; border-collapse: collapse; }
         th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
         th { background-color: #f2f2f2; }
+        tr:nth-child(even) { background-color: #ffefd5; } /* light yellowish orange */
+        tr:nth-child(odd) { background-color: #ffffff; } /* white */
         @media screen and (max-width: 600px) {
             table { border: 0; }
             thead { display: none; }
@@ -45,17 +47,17 @@
         <tbody>
             <tr>
                 <td data-label="Country">China</td>
-                <td data-label="Nominal GDP (USD bn)">19320</td>
-                <td data-label="PPP GDP (USD bn)">35000</td>
+                <td data-label="Nominal GDP (USD bn)">19,320</td>
+                <td data-label="PPP GDP (USD bn)">35,000</td>
                 <td data-label="GDP Growth (%)">4.5</td>
-                <td data-label="GDP per Capita (USD)">13600</td>
-                <td data-label="Population (mn)">1410</td>
+                <td data-label="GDP per Capita (USD)">13,600</td>
+                <td data-label="Population (mn)">1,410</td>
                 <td data-label="Inflation (%)">1.5</td>
                 <td data-label="Unemployment (%)">5.0</td>
                 <td data-label="Debt to GDP (%)">80</td>
                 <td data-label="Current Account (% GDP)">1.5</td>
-                <td data-label="Exports (USD bn)">3500</td>
-                <td data-label="Imports (USD bn)">2800</td>
+                <td data-label="Exports (USD bn)">3,500</td>
+                <td data-label="Imports (USD bn)">2,800</td>
                 <td data-label="FDI Inflow (USD bn)">180</td>
                 <td data-label="Currency">CNY</td>
                 <td data-label="Central Bank Rate (%)">4.0</td>
@@ -63,11 +65,11 @@
             </tr>
             <tr>
                 <td data-label="Country">India</td>
-                <td data-label="Nominal GDP (USD bn)">4190</td>
-                <td data-label="PPP GDP (USD bn)">15000</td>
+                <td data-label="Nominal GDP (USD bn)">4,190</td>
+                <td data-label="PPP GDP (USD bn)">15,000</td>
                 <td data-label="GDP Growth (%)">6.8</td>
-                <td data-label="GDP per Capita (USD)">2880</td>
-                <td data-label="Population (mn)">1455</td>
+                <td data-label="GDP per Capita (USD)">2,880</td>
+                <td data-label="Population (mn)">1,455</td>
                 <td data-label="Inflation (%)">4.5</td>
                 <td data-label="Unemployment (%)">6.5</td>
                 <td data-label="Debt to GDP (%)">85</td>
@@ -81,10 +83,10 @@
             </tr>
             <tr>
                 <td data-label="Country">Japan</td>
-                <td data-label="Nominal GDP (USD bn)">4186</td>
-                <td data-label="PPP GDP (USD bn)">6000</td>
+                <td data-label="Nominal GDP (USD bn)">4,186</td>
+                <td data-label="PPP GDP (USD bn)">6,000</td>
                 <td data-label="GDP Growth (%)">1.0</td>
-                <td data-label="GDP per Capita (USD)">34000</td>
+                <td data-label="GDP per Capita (USD)">34,000</td>
                 <td data-label="Population (mn)">123</td>
                 <td data-label="Inflation (%)">2.0</td>
                 <td data-label="Unemployment (%)">2.5</td>
@@ -99,10 +101,10 @@
             </tr>
             <tr>
                 <td data-label="Country">Russia</td>
-                <td data-label="Nominal GDP (USD bn)">2076</td>
-                <td data-label="PPP GDP (USD bn)">5000</td>
+                <td data-label="Nominal GDP (USD bn)">2,076</td>
+                <td data-label="PPP GDP (USD bn)">5,000</td>
                 <td data-label="GDP Growth (%)">1.5</td>
-                <td data-label="GDP per Capita (USD)">14400</td>
+                <td data-label="GDP per Capita (USD)">14,400</td>
                 <td data-label="Population (mn)">144</td>
                 <td data-label="Inflation (%)">5.0</td>
                 <td data-label="Unemployment (%)">4.0</td>
@@ -117,10 +119,10 @@
             </tr>
             <tr>
                 <td data-label="Country">South Korea</td>
-                <td data-label="Nominal GDP (USD bn)">1790</td>
-                <td data-label="PPP GDP (USD bn)">3000</td>
+                <td data-label="Nominal GDP (USD bn)">1,790</td>
+                <td data-label="PPP GDP (USD bn)">3,000</td>
                 <td data-label="GDP Growth (%)">2.2</td>
-                <td data-label="GDP per Capita (USD)">35000</td>
+                <td data-label="GDP per Capita (USD)">35,000</td>
                 <td data-label="Population (mn)">51</td>
                 <td data-label="Inflation (%)">2.0</td>
                 <td data-label="Unemployment (%)">3.5</td>
@@ -135,10 +137,10 @@
             </tr>
             <tr>
                 <td data-label="Country">Turkey</td>
-                <td data-label="Nominal GDP (USD bn)">1437</td>
-                <td data-label="PPP GDP (USD bn)">3600</td>
+                <td data-label="Nominal GDP (USD bn)">1,437</td>
+                <td data-label="PPP GDP (USD bn)">3,600</td>
                 <td data-label="GDP Growth (%)">3.0</td>
-                <td data-label="GDP per Capita (USD)">16000</td>
+                <td data-label="GDP per Capita (USD)">16,000</td>
                 <td data-label="Population (mn)">85</td>
                 <td data-label="Inflation (%)">40.0</td>
                 <td data-label="Unemployment (%)">10.0</td>
@@ -153,10 +155,10 @@
             </tr>
             <tr>
                 <td data-label="Country">Indonesia</td>
-                <td data-label="Nominal GDP (USD bn)">1429</td>
-                <td data-label="PPP GDP (USD bn)">4700</td>
+                <td data-label="Nominal GDP (USD bn)">1,429</td>
+                <td data-label="PPP GDP (USD bn)">4,700</td>
                 <td data-label="GDP Growth (%)">5.0</td>
-                <td data-label="GDP per Capita (USD)">5200</td>
+                <td data-label="GDP per Capita (USD)">5,200</td>
                 <td data-label="Population (mn)">275</td>
                 <td data-label="Inflation (%)">2.5</td>
                 <td data-label="Unemployment (%)">5.0</td>
@@ -171,10 +173,10 @@
             </tr>
             <tr>
                 <td data-label="Country">Saudi Arabia</td>
-                <td data-label="Nominal GDP (USD bn)">1083</td>
-                <td data-label="PPP GDP (USD bn)">2300</td>
+                <td data-label="Nominal GDP (USD bn)">1,083</td>
+                <td data-label="PPP GDP (USD bn)">2,300</td>
                 <td data-label="GDP Growth (%)">3.0</td>
-                <td data-label="GDP per Capita (USD)">30000</td>
+                <td data-label="GDP per Capita (USD)">30,000</td>
                 <td data-label="Population (mn)">36</td>
                 <td data-label="Inflation (%)">2.0</td>
                 <td data-label="Unemployment (%)">5.0</td>
@@ -190,9 +192,9 @@
             <tr>
                 <td data-label="Country">Taiwan</td>
                 <td data-label="Nominal GDP (USD bn)">804</td>
-                <td data-label="PPP GDP (USD bn)">1700</td>
+                <td data-label="PPP GDP (USD bn)">1,700</td>
                 <td data-label="GDP Growth (%)">3.0</td>
-                <td data-label="GDP per Capita (USD)">34000</td>
+                <td data-label="GDP per Capita (USD)">34,000</td>
                 <td data-label="Population (mn)">23</td>
                 <td data-label="Inflation (%)">1.5</td>
                 <td data-label="Unemployment (%)">3.5</td>
@@ -210,7 +212,7 @@
                 <td data-label="Nominal GDP (USD bn)">584</td>
                 <td data-label="PPP GDP (USD bn)">550</td>
                 <td data-label="GDP Growth (%)">1.5</td>
-                <td data-label="GDP per Capita (USD)">60000</td>
+                <td data-label="GDP per Capita (USD)">60,000</td>
                 <td data-label="Population (mn)">9.8</td>
                 <td data-label="Inflation (%)">3.0</td>
                 <td data-label="Unemployment (%)">4.0</td>
@@ -228,7 +230,7 @@
                 <td data-label="Nominal GDP (USD bn)">565</td>
                 <td data-label="PPP GDP (USD bn)">800</td>
                 <td data-label="GDP Growth (%)">2.5</td>
-                <td data-label="GDP per Capita (USD)">100000</td>
+                <td data-label="GDP per Capita (USD)">100,000</td>
                 <td data-label="Population (mn)">5.6</td>
                 <td data-label="Inflation (%)">2.0</td>
                 <td data-label="Unemployment (%)">2.0</td>
@@ -246,7 +248,7 @@
                 <td data-label="Nominal GDP (USD bn)">549</td>
                 <td data-label="PPP GDP (USD bn)">950</td>
                 <td data-label="GDP Growth (%)">4.0</td>
-                <td data-label="GDP per Capita (USD)">50000</td>
+                <td data-label="GDP per Capita (USD)">50,000</td>
                 <td data-label="Population (mn)">10</td>
                 <td data-label="Inflation (%)">2.0</td>
                 <td data-label="Unemployment (%)">3.0</td>
