--- a/index.html
+++ b/index.html
@@ -1,1 +1,230 @@
-<h1> Hello <h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dow Inc. 2Q 2025 Earnings Presentation - Interactive Dashboard</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <style>
+        body { font-family: Arial, sans-serif; background-color: #f8f9fa; color: #333; }
+        .navbar-brand { font-weight: bold; color: #007bff; }
+        section { padding: 20px; margin-bottom: 20px; background-color: white; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
+        h2 { color: #007bff; }
+        .insight-btn { background-color: #28a745; color: white; border: none; padding: 10px; border-radius: 5px; cursor: pointer; }
+        .insight-btn:hover { background-color: #218838; }
+        table { width: 100%; border-collapse: collapse; margin-top: 10px; }
+        th, td { border: 1px solid #ddd; padding: 12px; text-align: left; }
+        th { background-color: #007bff; color: white; }
+        .accordion-button { background-color: #e9ecef; }
+        @media (max-width: 768px) { table { font-size: 14px; } }
+    </style>
+</head>
+<body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#"><i class="fas fa-chart-line"></i> Dow Inc. Earnings Dashboard</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="#highlights"><i class="fas fa-star"></i> Highlights</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#segment-performance"><i class="fas fa-briefcase"></i> Segments</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#outlook"><i class="fas fa-binoculars"></i> Outlook</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#actions"><i class="fas fa-tools"></i> Actions</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#charts"><i class="fas fa-chart-bar"></i> Charts</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#stock-table"><i class="fas fa-table"></i> Stock Table</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#q1-q2-comparison"><i class="fas fa-balance-scale"></i> Q1 vs Q2</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#media"><i class="fas fa-video"></i> Media & Links</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <div class="container">
+        <section id="highlights">
+            <h2><i class="fas fa-star"></i> 2Q 2025 Highlights</h2>
+            <p>Navigating tough markets with strategic moves! Net sales hit $10.1B amid weak macro conditions.</p>
+            <ul class="list-group">
+                <li class="list-group-item">Operating EBITDA: $703MM <button class="insight-btn" data-bs-toggle="modal" data-bs-target="#insightModal" onclick="setInsight('EBITDA Insight: Down due to tariffs and geopolitics, but cost savings ramping up!')">Insight</button></li>
+                <li class="list-group-item">CapEx: $662MM (below D&A)</li>
+                <li class="list-group-item">Dividend Reduction: 50% for flexibility</li>
+                <li class="list-group-item">Cash Inflows: $2.4B from partnership + $1.2B litigation</li>
+                <li class="list-group-item">Divestitures: $250MM at 10x multiples</li>
+                <li class="list-group-item">Cost Savings: Upped to $400MM in-year</li>
+                <li class="list-group-item">Actions: Shutting 3 Europe assets, advancing growth investments</li>
+            </ul>
+        </section>
+
+        <section id="segment-performance">
+            <h2><i class="fas fa-briefcase"></i> Operating Segment Performance</h2>
+            <div class="accordion" id="segmentAccordion">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="packagingHeading">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#packagingCollapse">Packaging & Specialty Plastics</button>
+                    </h2>
+                    <div id="packagingCollapse" class="accordion-collapse collapse show">
+                        <div class="accordion-body">
+                            <ul>
+                                <li>Revenue: $5,025MM (down 9% YoY, 5% QoQ)</li>
+                                <li>Op. EBIT: $271MM (Margin: 5.4%)</li>
+                                <li>Key Drivers: Lower prices, higher maintenance</li>
+                                <li>End Markets: Packaging ~30%, Infrastructure ~40%</li>
+                            </ul>
+                            <button class="insight-btn" data-bs-toggle="modal" data-bs-target="#insightModal" onclick="setInsight('Actionable: Focus on Poly-7 ramp-up for margin boost in Q3!')">Insight</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="industrialHeading">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#industrialCollapse">Industrial Intermediates & Infrastructure</button>
+                    </h2>
+                    <div id="industrialCollapse" class="accordion-collapse collapse">
+                        <div class="accordion-body">
+                            <ul>
+                                <li>Revenue: $2,786MM (down 6% YoY, 2% QoQ)</li>
+                                <li>Op. EBIT: $57MM (Margin: 2.0%)</li>
+                                <li>Key Drivers: Lower volumes in deicing, maintenance</li>
+                                <li>End Markets: Infrastructure ~35%, Consumer ~25%</li>
+                            </ul>
+                            <button class="insight-btn" data-bs-toggle="modal" data-bs-target="#insightModal" onclick="setInsight('Actionable: Volume growth expected in Q3 with new capacity!')">Insight</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="performanceHeading">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#performanceCollapse">Performance Materials & Coatings</button>
+                    </h2>
+                    <div id="performanceCollapse" class="accordion-collapse collapse">
+                        <div class="accordion-body">
+                            <ul>
+                                <li>Revenue: $2,105MM (down 8% YoY, flat QoQ)</li>
+                                <li>Op. EBIT: $85MM (Margin: 4.0%)</li>
+                                <li>Key Drivers: Seasonal demand drop, margin compression</li>
+                                <li>End Markets: Consumer ~40%, Mobility ~20%</li>
+                            </ul>
+                            <button class="insight-btn" data-bs-toggle="modal" data-bs-target="#insightModal" onclick="setInsight('Actionable: Watch for seasonal rebound in downstream coatings!')">Insight</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <p>Overall trend: Revenue declining since 2020 due to macro pressures.</p>
+        </section>
+
+        <section id="outlook">
+            <h2><i class="fas fa-binoculars"></i> Outlook & Guidance</h2>
+            <p>Modest Q3 improvement ahead!</p>
+            <ul class="list-group">
+                <li class="list-group-item">Q3 Net Sales: ~$10.2B</li>
+                <li class="list-group-item">FY Tax Rate: (40)% to (60)%</li>
+                <li class="list-group-item">Packaging: +1% to +3% sales QoQ, higher margins ~$215MM tailwind</li>
+                <li class="list-group-item">Industrial: -1% to +1% sales, volume growth ~$30MM tailwind</li>
+                <li class="list-group-item">Performance: -4% to -2% sales, seasonal headwind ~$85MM</li>
+            </ul>
+            <button class="insight-btn" data-bs-toggle="modal" data-bs-target="#insightModal" onclick="setInsight('Insight: Focus on cost reductions for EBITDA uplift in H2!')">Guidance Insight</button>
+        </section>
+
+        <section id="actions">
+            <h2><i class="fas fa-tools"></i> Actions for Flexibility & Profitability</h2>
+            <p>Driving execution for higher returns over the cycle.</p>
+            <ul>
+                <li>Commitment to shareholder returns</li>
+                <li>Asset shutdowns in Europe</li>
+                <li>Growth investments in high-value markets</li>
+            </ul>
+        </section>
+
+        <section id="charts">
+            <h2><i class="fas fa-chart-bar"></i> Financial Charts</h2>
+            <div class="row">
+                <div class="col-md-6">
+                    <canvas id="revenueChart"></canvas>
+                </div>
+                <div class="col-md-6">
+                    <canvas id="ebitdaChart"></canvas>
+                </div>
+            </div>
+            <script>
+                const revenueCtx = document.getElementById('revenueChart').getContext('2d');
+                new Chart(revenueCtx, {
+                    type: 'line',
+                    data: {
+                        labels: ['2Q24', '1Q25', '2Q25', '3Q25 Est'],
+                        datasets: [{ label: 'Net Sales ($B)', data: [11.5, 10.4, 10.1, 10.2], borderColor: '#007bff', fill: false }]
+                    },
+                    options: { scales: { y: { beginAtZero: false } } }
+                });
+
+                const ebitdaCtx = document.getElementById('ebitdaChart').getContext('2d');
+                new Chart(ebitdaCtx, {
+                    type: 'bar',
+                    data: {
+                        labels: ['2Q24', '1Q25', '2Q25'],
+                        datasets: [{ label: 'Op. EBITDA ($MM)', data: [1200, 944, 703], backgroundColor: '#28a745' }]
+                    },
+                    options: { scales: { y: { beginAtZero: true } } }
+                });
+            </script>
+            <p>Interactive Tip: Hover over charts for details!</p>
+        </section>
+
+        <section id="stock-table">
+            <h2><i class="fas fa-table"></i> Stock Performance Table</h2>
+            <table>
+                <thead>
+                    <tr><th>Ticker</th><th>Company</th><th>1W %</th><th>1M %</th><th>3M %</th><th>YTD %</th><th>1Y %</th><th>5Y %</th></tr>
+                </thead>
+                <tbody>
+                    <tr><td>DOW</td><td>Dow Inc.</td><td>0.50</td><td>-8.00</td><td>-14.55</td><td>-37.84</td><td>-53.76</td><td>-41.45</td></tr>
+                    <!-- Add other rows as before -->
+                </tbody>
+            </table>
+        </section>
+
+        <section id="q1-q2-comparison">
+            <h2><i class="fas fa-balance-scale"></i> Q1 vs Q2 Comparison</h2>
+            <table>
+                <thead><tr><th>Metric</th><th>Q1 2025</th><th>Q2 2025</th><th>Change %</th></tr></thead>
+                <tbody>
+                    <tr><td>Net Sales ($B)</td><td>10.4</td><td>10.1</td><td>-2.88</td></tr>
+                    <tr><td>Op. EBITDA ($MM)</td><td>944</td><td>703</td><td>-25.53</td></tr>
+                </tbody>
+            </table>
+            <button class="insight-btn" data-bs-toggle="modal" data-bs-target="#insightModal" onclick="setInsight('Comparison Insight: Q2 dip due to maintenance; expect Q3 recovery!')">Analyze</button>
+        </section>
+
+        <section id="media">
+            <h2><i class="fas fa-video"></i> Media & Links</h2>
+            <iframe width="100%" height="315" src="https://www.youtube.com/embed/b_H_TMZlrNQ" title="Dow Earnings Video" frameborder="0" allowfullscreen></iframe>
+            <ul>
+                <li><a href="https://investors.dow.com/" target="_blank">Investor Relations</a></li>
+                <li><a href="https://www.dow.com/" target="_blank">Official Website</a></li>
+            </ul>
+        </section>
+    </div>
+
+    <!-- Modal for Insights -->
+    <div class="modal fade" id="insightModal" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Actionable Insight</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body" id="insightText"></div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script>
+        function setInsight(text) {
+            document.getElementById('insightText').innerText = text;
+        }
+    </script>
+</body>
+</html>
