--- a/index.html
+++ b/index.html
@@ -198,26 +198,40 @@
 
         <section id="stock-table">
             <h2><i class="fas fa-table"></i> Stock Performance Table</h2>
-            <table>
-                <thead>
-                    <tr><th>Ticker</th><th>Company</th><th>1W %</th><th>1M %</th><th>3M %</th><th>YTD %</th><th>1Y %</th><th>5Y %</th></tr>
-                </thead>
-                <tbody>
-                    <tr><td>DOW</td><td>Dow Inc.</td><td>0.50</td><td>-8.00</td><td>-14.55</td><td>-37.84</td><td>-53.76</td><td>-41.45</td></tr>
-                    <!-- Add other rows as before -->
-                </tbody>
-            </table>
+            <div class="table-responsive">
+                <table>
+                    <thead>
+                        <tr><th>Ticker</th><th>Company</th><th>1W %</th><th>1M %</th><th>3M %</th><th>YTD %</th><th>1Y %</th><th>5Y %</th></tr>
+                    </thead>
+                    <tbody>
+                        <tr><td>DOW</td><td>Dow Inc.</td><td>0.50</td><td>-8.00</td><td>-14.55</td><td>-37.84</td><td>-53.76</td><td>-41.45</td></tr>
+                        <tr><td>LYB</td><td>LyondellBasell Industries NV</td><td>2.52</td><td>4.69</td><td>5.47</td><td>-18.47</td><td>-37.02</td><td>-11.71</td></tr>
+                        <tr><td>CE</td><td>Celanese Corporation</td><td>0.32</td><td>2.90</td><td>33.54</td><td>-17.85</td><td>-58.86</td><td>-38.52</td></tr>
+                        <tr><td>Mx</td><td>METHANEX CORP</td><td>0.20</td><td>-4.03</td><td>7.23</td><td>-36.53</td><td>-32.06</td><td>72.84</td></tr>
+                        <tr><td>EMN</td><td>Eastman Chemical Company</td><td>-0.78</td><td>2.13</td><td>0.25</td><td>-15.14</td><td>-20.84</td><td>0.91</td></tr>
+                        <tr><td>TATACHEM</td><td>TATA CHEMICALS LTD</td><td>0.67</td><td>3.45</td><td>9.41</td><td>-9.17</td><td>-9.33</td><td>209.28</td></tr>
+                        <tr><td>PPG</td><td>PPG Industries, Inc.</td><td>-0.34</td><td>0.63</td><td>11.56</td><td>-3.42</td><td>-9.43</td><td>4.01</td></tr>
+                        <tr><td>SOLB</td><td>SOLVAY</td><td>5.20</td><td>0.88</td><td>-0.38</td><td>-6.14</td><td>-10.76</td><td>64.33</td></tr>
+                        <tr><td>EVK</td><td>EVONIK INDUSTRIES AG</td><td>1.70</td><td>-1.91</td><td>-7.00</td><td>7.17</td><td>-2.43</td><td>-26.35</td></tr>
+                        <tr><td>NTR</td><td>NUTRIEN LTD</td><td>2.86</td><td>-0.24</td><td>10.65</td><td>27.07</td><td>8.94</td><td>85.13</td></tr>
+                        <tr><td>2020</td><td>SABIC AGRI-NUTRIENTS CO</td><td>1.50</td><td>6.30</td><td>12.24</td><td>5.14</td><td>0.95</td><td>49.96</td></tr>
+                        <tr><td>600688</td><td>SINOPEC SHANGHAI PETROCHEMICAL CO</td><td>2.17</td><td>3.51</td><td>-1.34</td><td>-2.32</td><td>12.17</td><td>-18.96</td></tr>
+                    </tbody>
+                </table>
+            </div>
         </section>
 
         <section id="q1-q2-comparison">
             <h2><i class="fas fa-balance-scale"></i> Q1 vs Q2 Comparison</h2>
-            <table>
-                <thead><tr><th>Metric</th><th>Q1 2025</th><th>Q2 2025</th><th>Change %</th></tr></thead>
-                <tbody>
-                    <tr><td>Net Sales ($B)</td><td>10.4</td><td>10.1</td><td>-2.88</td></tr>
-                    <tr><td>Op. EBITDA ($MM)</td><td>944</td><td>703</td><td>-25.53</td></tr>
-                </tbody>
-            </table>
+            <div class="table-responsive">
+                <table>
+                    <thead><tr><th>Metric</th><th>Q1 2025</th><th>Q2 2025</th><th>Change %</th></tr></thead>
+                    <tbody>
+                        <tr><td>Net Sales ($B)</td><td>10.4</td><td>10.1</td><td>-2.88</td></tr>
+                        <tr><td>Op. EBITDA ($MM)</td><td>944</td><td>703</td><td>-25.53</td></tr>
+                    </tbody>
+                </table>
+            </div>
             <button class="insight-btn" data-bs-toggle="modal" data-bs-target="#insightModal" onclick="setInsight('Comparison Insight: Q2 dip due to maintenance; expect Q3 recovery!')">Analyze</button>
         </section>
 
