--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
         .tab-content { padding: 20px; }
         .bullet-list { list-style-type: disc; margin-left: 20px; }
         .bullet-list li { margin-bottom: 10px; }
+        #chart-container { height: 400px; }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1 class="text-center mb-4">Albemarle Earnings Summary</h1>
+        <h1 class="text-center mb-4">Albemarle Earnings Interactive Dashboard</h1>
         <ul class="nav nav-tabs" id="earningsTabs" role="tablist">
             <li class="nav-item" role="presentation">
                 <button class="nav-link active" id="main-tab" data-bs-toggle="tab" data-bs-target="#main" type="button" role="tab">Main Summary</button>
@@ -37,64 +38,68 @@
             <div class="tab-pane fade show active" id="main" role="tabpanel">
                 <h2>Main Summary</h2>
                 <h3>Changes in Key Metrics</h3>
-                <table class="table table-striped">
-                    <thead>
-                        <tr>
-                            <th>Quarter</th>
-                            <th>Revenue ($B)</th>
-                            <th>QoQ Change (%)</th>
-                            <th>YoY Change (%)</th>
-                            <th>EBITDA ($M)</th>
-                            <th>EBITDA %</th>
-                            <th>Production Volume (kT LCE)</th>
-                            <th>YoY Change (%)</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Q3 2024</td>
-                            <td>1.355</td>
-                            <td>-</td>
-                            <td>-41</td>
-                            <td>211</td>
-                            <td>16</td>
-                            <td>59</td>
-                            <td>+16 (Energy Storage)</td>
-                        </tr>
-                        <tr>
-                            <td>Q4 2024</td>
-                            <td>1.232</td>
-                            <td>-9</td>
-                            <td>-48</td>
-                            <td>251</td>
-                            <td>20</td>
-                            <td>49</td>
-                            <td>-10 (Energy Storage)</td>
-                        </tr>
-                        <tr>
-                            <td>Q1 2025</td>
-                            <td>1.077</td>
-                            <td>-12.6</td>
-                            <td>-21</td>
-                            <td>267</td>
-                            <td>25</td>
-                            <td>44</td>
-                            <td>0 (flat)</td>
-                        </tr>
-                        <tr>
-                            <td>Q2 2025</td>
-                            <td>1.330</td>
-                            <td>+23.5</td>
-                            <td>-7</td>
-                            <td>336</td>
-                            <td>25</td>
-                            <td>58</td>
-                            <td>+15 (Energy Storage)</td>
-                        </tr>
-                    </tbody>
-                </table>
+                <div class="table-responsive">
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th>Quarter</th>
+                                <th>Revenue ($B)</th>
+                                <th>QoQ Change (%)</th>
+                                <th>YoY Change (%)</th>
+                                <th>EBITDA ($M)</th>
+                                <th>EBITDA %</th>
+                                <th>Production Volume (kT LCE)</th>
+                                <th>YoY Change (%)</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Q3 2024</td>
+                                <td>1.355</td>
+                                <td>-</td>
+                                <td>-41</td>
+                                <td>211</td>
+                                <td>16</td>
+                                <td>59</td>
+                                <td>+16 (Energy Storage)</td>
+                            </tr>
+                            <tr>
+                                <td>Q4 2024</td>
+                                <td>1.232</td>
+                                <td>-9</td>
+                                <td>-48</td>
+                                <td>251</td>
+                                <td>20</td>
+                                <td>49</td>
+                                <td>-10 (Energy Storage)</td>
+                            </tr>
+                            <tr>
+                                <td>Q1 2025</td>
+                                <td>1.077</td>
+                                <td>-12.6</td>
+                                <td>-21</td>
+                                <td>267</td>
+                                <td>25</td>
+                                <td>44</td>
+                                <td>0 (flat)</td>
+                            </tr>
+                            <tr>
+                                <td>Q2 2025</td>
+                                <td>1.330</td>
+                                <td>+23.5</td>
+                                <td>-7</td>
+                                <td>336</td>
+                                <td>25</td>
+                                <td>58</td>
+                                <td>+15 (Energy Storage)</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
                 <h3>Lithium Spodumene and Spot Prices (LHS, Log Scale) and Albemarle Share Price (RHS) (2 Years)</h3>
-                <canvas id="pricesChart" width="400" height="200"></canvas>
+                <div id="chart-container">
+                    <canvas id="pricesChart"></canvas>
+                </div>
             </div>
             <div class="tab-pane fade" id="q225" role="tabpanel">
                 <h2>Q2 2025 Summary</h2>
@@ -175,6 +180,7 @@
             },
             options: {
                 responsive: true,
+                maintainAspectRatio: false,
                 scales: {
                     y: {
                         type: 'logarithmic',
@@ -186,6 +192,13 @@
                         position: 'right',
                         grid: {
                             drawOnChartArea: false
+                        }
+                    },
+                    x: {
+                        ticks: {
+                            autoSkip: true,
+                            maxTicksLimit: 10,
+                            rotation: 45
                         }
                     }
                 }
